Add some Y-padding to the city input field for mobile.

--- a/src/App.scss
+++ b/src/App.scss
@@ -103,6 +103,7 @@
 	@media (max-width: 300px) {
 		.text-line {
 			font-size: 0.8rem;
+			width: 65%;
 			padding: 0px;
 			margin-right: 10px;
 		}
@@ -111,6 +112,7 @@
 	@media (max-width: 400px) {
 		.text-line {
 			padding: 0px;
+			width: 65%;
 			margin-right: 10px;
 		}
 	}
